fix: change master to main

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -4,7 +4,7 @@ on:
     push:
         branches:
             - "+([0-9])?(.{+([0-9]),x}).x"
-            - master
+            - main
             - next
     pull_request:
         branches:
