fix: add dependency between build, version steps

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -26,6 +26,7 @@ jobs:
             - run: npx semantic-release
 
     build:
+        needs: version
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v2
