fix: install semantic-release exec plugin

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -21,7 +21,7 @@ jobs:
                   path: version/
                   key: version_${{ github.sha }}
 
-            - run: npm i -g semantic-release @semantic-release/changelog
+            - run: npm i -g semantic-release @semantic-release/exec @semantic-release/changelog
             - run: cp .github/.releaserc.yml .
             - run: npx semantic-release
 
