--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -9,6 +9,7 @@ on:
     pull_request:
         branches:
             - "+([0-9])?(.{+([0-9]),x}).x"
+            - main
             - next
 
 jobs:
@@ -18,12 +19,10 @@ jobs:
             - uses: actions/checkout@v2
             - uses: actions/cache@v2
               with:
-                  path: version/
+                  path: ".env\nCHANGELOG"
                   key: version_${{ github.sha }}
 
-            - run: npm i -g semantic-release @semantic-release/exec @semantic-release/changelog
-            - run: cp .github/.releaserc.yml .
-            - run: npx semantic-release -d
+            - run: sh .github/version.sh
 
     build:
         needs: version
