--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -19,10 +19,15 @@ jobs:
             - uses: actions/checkout@v2
             - uses: actions/cache@v2
               with:
-                  path: ".env\nCHANGELOG"
+                  path: ".env\nVERSION\nCHANGELOG"
                   key: version_${{ github.sha }}
+            - uses: actions/setup-node@v2
+              with:
+                  node-version: "14"
 
-            - run: sh .github/version.sh
+            - run: npm i -g semantic-release @semantic-release/exec
+            - run: cp .github/.releaserc.yml .
+            - run: npx semantic-release
 
     build:
         needs: version
@@ -35,8 +40,12 @@ jobs:
                   key: ${{ hashFiles('.terraform.lock.hcl') }}
             - uses: actions/cache@v2
               with:
+                  path: ".env\nVERSION\nCHANGELOG"
+                  key: version_${{ github.sha }}
+            - uses: actions/cache@v2
+              with:
                   path: dist/
-                  key: build_${{ github.sha }}
+                  key: ${{ github.sha }}
             - uses: hashicorp/setup-terraform@v1
               with:
                   terraform_version: "1.1.4"
@@ -58,9 +67,9 @@ jobs:
               with:
                   terraform_version: "1.1.4"
 
-            - run: echo test
+            - run: echo CodeCoverage
 
-    release:
+    release:git:
         needs: test
         runs-on: ubuntu-latest
         if: github.event_name == 'push'
@@ -68,14 +77,15 @@ jobs:
             - uses: actions/checkout@v2
             - uses: actions/cache@v2
               with:
-                  path: version/
+                  path: ".env\nVERSION\nCHANGELOG"
                   key: version_${{ github.sha }}
             - uses: actions/cache@v2
               with:
                   path: dist/
-                  key: build_${{ github.sha }}
+                  key: ${{ github.sha }}
 
-            - run: git tag $(cat version/VERSION) && git push --tag
+            - run: git tag $(cat VERSION)
+            - run: git push --tag
             - uses: softprops/action-gh-release@v1
               with:
                   body_path: version/CHANGELOG
