--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -69,7 +69,7 @@ jobs:
 
             - run: echo CodeCoverage
 
-    release:git:
+    release_git:
         needs: test
         runs-on: ubuntu-latest
         if: github.event_name == 'push'
