--- a/.github/.releaserc.yml
+++ b/.github/.releaserc.yml
@@ -2,7 +2,7 @@ dryRun: true
 tagFormat: "${version}"
 branches:
     - "+([0-9])?(.{+([0-9]),x}).x"
-    - { name: "master", prerelease: false }
+    - { name: "main", prerelease: false }
     - { name: "next", prerelease: true, channel: "next" }
 plugins:
     - "@semantic-release/commit-analyzer"
