--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -91,6 +91,6 @@ jobs:
             - uses: softprops/action-gh-release@v1
               with:
                   tag_name: ${{ env.VERSION }}
-                  prerelease: ${{ env.CHANNEL }}
+                  prerelease: ${{ env.CHANNEL != "latest" }}
                   body_path: CHANGELOG
                   files: dist/**
