clear: clear .env.example file

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -28,6 +28,7 @@ jobs:
             - run: npm i -g semantic-release @semantic-release/exec
             - run: cp .github/.releaserc.yml .
             - run: npx semantic-release
+            - run: cp .env.example .env
 
     build:
         needs: version
